fix(flexgrid): have row component wrap properly

--- a/docs/scss/_examples.scss
+++ b/docs/scss/_examples.scss
@@ -26,8 +26,3 @@
 .docs_align-flex-start {
   align-items: flex-start;
 }
-
-.docs_display-flex-height {
-  display: flex;
-  height: 100%;
-}
