--- a/src/components/FlexGrid/FlexGrid.modules.scss
+++ b/src/components/FlexGrid/FlexGrid.modules.scss
@@ -4,8 +4,6 @@
 $max-widths: (xs: auto, small: 576px, medium: 768px, large: 992px, xl: 1200px);
 
 .flexGrid {
-  display: flex;
-  flex-flow: row wrap;
   padding: 0;
 }
 
@@ -32,15 +30,4 @@ $max-widths: (xs: auto, small: 576px, medium: 768px, large: 992px, xl: 1200px);
 .gutterless {
   padding-left: 0 !important;
   padding-right: 0 !important;
-}
-
-.flexGridColumn {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-// Row styles
-.flexGridRow {
-  margin: 0;
-  flex: 1 1 auto;
 }
